# fitness-planner-api

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 5a708c4135d2_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  enums.py  errors.py
app/data/: __init__.py  exercise_import.py  exercise_seed.py
app/db/: session.py
app/models/: __init__.py  exercise.py  plan.py  user.py
app/schemas/: __init__.py  auth.py  exercise.py  log.py  plan.py  profile.py
app/services/: analytics.py  plan_adjustments.py  plan_explanations.py  plan_views.py  planner.py  reranking.py  security.py  workout_logs.py
docs/: api-documentation.md  data-design.md  dataset-evaluation.md  genai-appendix.md  genai-usage.md  presentation-slides-link.md  technical-report.md
scripts/: build_api_docs_pdf.py  build_exercise_seed.py  build_genai_appendix_pdf.py  build_technical_report_pdf.py  fetch_wger_snapshot.py  import_exercise_seed.py  render_start.sh
tests/: conftest.py  helpers.py  test_analytics_api.py  test_auth.py  test_concurrency.py  test_config.py  test_context_reranking.py  test_error_responses.py  test_exercise_import.py  test_exercise_pipeline.py  test_exercises.py  test_exercises_api.py  test_explanation_user_stories.py  test_golden_path.py  test_health.py  test_migrations.py  test_plan_adjustments_api.py  test_plan_explanation_prompt.py  test_plan_explanation_resilience.py  test_plan_explanations_api.py  test_plans_api.py  test_profile.py  test_seed_artifacts.py  test_workout_logs_api.py
(+10 files in other folders)
