[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-planner-api"
version = "0.1.0"
description = "Constraint-aware fitness planning API built with FastAPI and PostgreSQL"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.14,<2.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "passlib>=1.7,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "PyJWT>=2.10,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
